# Project-Frog

./: .gitignore  CMakeLists.txt  GDD.md  Planejamento.md  README.md
.github/instructions/: instructions.instructions.md
Arquivos CMake/: CMakeLists-Facundo.txt  CMakeLists-Kayque.txt  CMakeLists-Lott.txt  CMakeLists-Rubens.txt
Assets/Chest/: chest.json
Assets/Coin/: coin.json
Assets/Enemies/Bear/: Bear.json
Assets/Enemies/BearAttack/: BearAttack.json
Assets/Enemies/Beatle/: beatle.json
Assets/Enemies/BeatleAttack/: beatleAttack.json
Assets/Enemies/GolemBoss/: golem.json
Assets/Enemies/Snake/: snake.json
Assets/Enemies/SnakeAttack/: snakeAttack.json
Assets/Enemies/Wolf/: wolf.json
Assets/Enemies/WolfAttack/: wolfAttack.json
Assets/Frog/: Frog.json
Assets/Icons/White/: white-icon.json
Assets/Magics/Fire/1/: firemagic01.json
Assets/Magics/Fire/2/: firemagic02.json
Assets/Magics/Fire/3/: firemagic03.json
Assets/Magics/Grass/1/: grassmagic01.json
Assets/Magics/Grass/2/: grassmagic02.json
Assets/Magics/Grass/3/: grassmagic03.json
Assets/Magics/Neutral/1/: neutralmagic01.json
Assets/Magics/Neutral/2/: neutralmagic02.json
Assets/Magics/Neutral/3/: neutralmagic03.json
Assets/Magics/Water/3/: watermagic03.json
Assets/Rabbit/: rabbit.json
Shaders/: Base.frag  Base.vert
Source/: CSV.h  Game.cpp  Game.h
Source/Actors/: Actor.cpp  ActorConstants.h  AnimatedCharacterActor.cpp  AnimatedCharacterActor.h  BearActor.cpp  BearActor.h  BeatleActor.cpp  BeatleActor.h  ChestNPC.cpp  ChestNPC.h  CoinNPC.cpp  CoinNPC.h  Combatant.cpp  Combatant.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnemyType.h  FrogActor.cpp  FrogActor.h  GolemBossActor.cpp  GolemBossActor.h  MagicProjectileActor.cpp  MagicProjectileActor.h  NPCActor.cpp  NPCActor.h  Player.cpp  Player.h  RabbitNPC.cpp  RabbitNPC.h  SnakeActor.cpp  SnakeActor.h  WolfActor.cpp  WolfActor.h
Source/Audio/: AudioSystem.cpp  AudioSystem.h
Source/Combat/: Card.cpp  Card.h  CombatConstants.h  CombatManager.cpp  CombatManager.h  CombatRenderer.cpp  CombatRenderer.h  Item.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/GameScene/: AnimationTestScene.cpp  AnimationTestScene.h  BlackScreenScene.cpp  BlackScreenScene.h  CombatScene.cpp  CombatScene.h  DebugMenuScene.cpp  DebugMenuScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  MapScene.cpp  MapScene.h  MenuTextureHelper.cpp  MenuTextureHelper.h  RestScene.cpp  RestScene.h  RewardScene.cpp  RewardScene.h  SceneInputHelper.cpp  SceneInputHelper.h  ShopScene.cpp  ShopScene.h  VictoryScene.cpp  VictoryScene.h
Source/Interface/: UIButton.cpp  UIButton.h  UIImage.cpp  UIImage.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h
Source/Interface/HUD/: HUD.h
Source/Map/: MapGenerator.cpp  MapGenerator.h  MapNode.cpp  MapNode.h  MapNodeType.h
Source/Renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  TextureUtils.cpp  TextureUtils.h  VertexArray.cpp
